k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
      - name: gateway

        image: santoshbaba1/gateway-service-v1:latest

        ports:
        - containerPort: 3003

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 250m
            memory: 256Mi

        readinessProbe:
          httpGet:
            path: /
            port: 3003

        livenessProbe:
          httpGet:
            path: /
            port: 3003
