k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: microservices

spec:
  replicas: 2

  selector:
    matchLabels:
      app: product

  template:
    metadata:
      labels:
        app: product

    spec:
      containers:
      - name: product

        image: santoshbaba1/product-service-v1:latest

        ports:
        - containerPort: 3001

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 250m
            memory: 256Mi

        readinessProbe:
          httpGet:
            path: /
            port: 3001

        livenessProbe:
          httpGet:
            path: /
            port: 3001
