k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: microservices

spec:
  selector:
    app: gateway

  ports:
  - port: 3003
    targetPort: 3003

  type: ClusterIP
