k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices

spec:
  selector:
    app: order

  ports:
  - port: 3002
    targetPort: 3002

  type: ClusterIP
