k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microservices

spec:
  selector:
    app: product

  ports:
  - port: 3001
    targetPort: 3001

  type: ClusterIP
