k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: microservices

spec:
  selector:
    app: user

  ports:
  - port: 3000
    targetPort: 3000

  type: ClusterIP
